processed/gerrit/txt/43938.txt
Change:     43938
Subject:    LU-14093 utils: fix DLSYM buffer over flow
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/43938
Change-Id:  I8ae30a5288f236fb9272dffd40f44175e5e03ef9
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      James Simmons
Created:    2021-06-07 12:39:59.000000000
Updated:    2021-06-21 22:18:23.000000000
Patch Set:  3
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Arshad Hussain: +1; Alex Zhuravlev: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Alex Zhuravlev, Arshad Hussain, Dominique Martinet

--- Commit Message ---
LU-14093 utils: fix DLSYM buffer over flow

The 'name' string passed to DLSYM macro is created from the fsname
buffer in load_backfs_module(). That buffer is greater than 512
bytes in size but the temporary buffer in DLSYM is only 64. The
newest gcc version detect this bug.

mount_utils.c: In function ‘load_backfs_module’:
mount_utils.c:530:36: error: ‘%s’ directive output may be truncated writing up to 507 bytes into a region of size 64 [-Werror=format-truncation=]
  530 |   snprintf(_fname, sizeof(_fname), "%s_%s", prefix, #func); \
      |                                    ^~~~~~~
mount_utils.c:593:2: note: in expansion of macro ‘DLSYM’
  593 |  DLSYM(name, ops, init);

Change-Id: I8ae30a5288f236fb9272dffd40f44175e5e03ef9
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/43938
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (James Simmons, 2021-06-07 12:39:59.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-06-07 12:41:50.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Alex Zhuravlev, 2021-06-07 12:43:24.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Arshad Hussain, 2021-06-07 12:47:48.000000000) ---
Patch Set 1: Code-Review+1

--- Message (jenkins, 2021-06-07 13:14:40.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/81220/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/21145/ : SUCCESS

--- Message (Lustre Gerrit Janitor, 2021-06-07 13:17:05.000000000) ---
Patch Set 1:

Build is taking too long, aborting

 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/16346/results.html

--- Message (James Simmons, 2021-06-09 01:33:29.000000000) ---
Patch Set 2: Patch Set 1 was rebased

--- Message (wc-checkpatch, 2021-06-09 01:33:48.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2021-06-09 02:23:02.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/81263/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews-patchless/21186/ : SUCCESS

--- Message (Autotest, 2021-06-09 19:45:54.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-part-5 session on el8.3-x86_64/ldiskfs servers and clients for build 81263 patch 2. Requested by James Simmons because of LU-10279.

--- Message (Autotest, 2021-06-09 20:10:14.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-zfs-part-3 session on el8.3-x86_64/zfs servers and clients for build 81263 patch 2. Requested by James Simmons because of LU-14658.

--- Message (Oleg Drokin, 2021-06-21 22:18:16.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2021-06-21 22:18:23.000000000) ---
Change has been successfully cherry-picked as 76bea6ca661609e3788d1cfe7e08e4a63af0a349 by Oleg Drokin
